--- a/vignettes/pEC_nCV_MainEffect.Rmd
+++ b/vignettes/pEC_nCV_MainEffect.Rmd
@@ -113,7 +113,7 @@ rncv_result <- regular_nestedCV(train.ds = rbind(data.sets$train,data.sets$holdo
 
 ### nested CV results
 ```{r, message=FALSE, echo=T}
-cat("\n Train Accuracy [",rncv_result$Train,"]\n")
+cat("\n Train Accuracy [",rncv_result$cv.acc,"]\n")
 cat("\n Validation Accuracy [",rncv_result$Validation,"]\n")
 cat("\n Selected Features \n [",rncv_result$Features,"]\n")
 cat("\n Elapsed Time [",rncv_result$Elapsed,"]\n")
@@ -137,9 +137,126 @@ cncv_result <- consensus_nestedCV(train.ds = rbind(data.sets$train,data.sets$hol
 ### cnCV results
 
 ```{r, echo=T}
-cat("\n Train Accuracy [",cncv_result$Train,"]\n")
+cat("\n Train Accuracy [",cncv_result$cv.acc,"]\n")
 cat("\n Validation Accuracy [",cncv_result$Validation,"]\n")
 cat("\n Selected Features \n [",cncv_result$Features,"]\n")
 cat("\n Elapsed Time [",cncv_result$Elapsed,"]\n")
 ```
 
+### Simulate Data with Quantitative Outcome as well as Numeric Predictors with Main Effects
+```{r, message=FALSE}
+library(privateEC)
+n.samples <- 300     # 100 samples in train/holdout/test
+n.variables <- 100   # 100 features
+label <- "qtrait"
+type <- "mainEffect" # main effect simulatios
+bias <- 0.6          # moderate effect size
+pct.signals <- 0.1   # pct functional features
+verbose <- FALSE
+
+data.sets <- createSimulation(num.samples = n.samples,
+                              num.variables = n.variables,
+                              pct.signals = pct.signals,
+                              label = label,
+                              bias = bias,
+                              pct.train = 1/3,
+                              pct.holdout = 1/3,
+                              pct.validation = 1/3,
+                              sim.type = type,
+                              save.file = NULL,
+                              verbose = verbose)
+```
+
+### Run pEC on simulated data
+
+```{r, message=FALSE}
+update.freq <- 5   # attributes evaporated per iteration
+num_tree <- 500
+importance.algorithm <- "RReliefFequalK"
+
+pec.result <- privateEC(train.ds = data.sets$train,                  # training split
+                        holdout.ds = data.sets$holdout,               # holdout split
+                        validation.ds = data.sets$validation,         # validation set
+                        label = data.sets$label,                      # class label
+                        importance.algorithm = importance.algorithm,  # ReliefF
+                        relief.k.method = "k_half_sigma",             # ReliefF knn
+                        rf.ntree = num_tree,                          # random forest
+                        is.simulated = TRUE,                          # validation set
+                        bias = bias,                                  # pEC privacy
+                        update.freq = update.freq,                    # num attr evaporated
+                        save.file = NULL,                             # save results
+                        signal.names = data.sets$signal.names,        # functional attr names
+                        use.nestedCV = T,
+                        verbose = verbose)
+```
+
+### pEC results
+#### Table of iterations
+```{r, echo=FALSE}
+knitr::kable(pec.result$algo.acc, caption = "Evaporation Iterations",
+             row.names = FALSE, digits = 3)
+```
+
+#### Plot of results
+```{r, echo=FALSE, fig.width=7, fig.width=7, fig.align='center'}
+plotRunResults(pec.result)
+```
+
+#### pEC selected features
+Best pEC model selected based on highest holdout accuracy. Train, holdout and independent validation accuracies of selected model shown below. Features in model are listed: simvar prefix variables are functional. Others are background.  
+```{r, echo=T}
+multiple.max.indices <- which(pec.result$algo.acc$holdout.acc==max(pec.result$algo.acc$holdout.acc))
+last.max <- multiple.max.indices[length(multiple.max.indices)]
+cat("\n Max Holdout Accuracy Step [",last.max,"]\n")
+cat("\n Accuracies: ")
+print(pec.result$algo.acc[last.max,])
+cat("\n Selected Features \n [",pec.result$atts.remain[[last.max]],"]\n")
+```
+
+### Standard nested CV
+
+```{r, message=FALSE}
+rncv_result <- regular_nestedCV(train.ds = rbind(data.sets$train,data.sets$holdout), 
+                                validation.ds =  data.sets$validation,
+                                label = data.sets$label,
+                                is.simulated = TRUE,
+                                ncv_folds = c(10, 10),
+                                param.tune = FALSE,
+                                learning_method = "rf", 
+                                importance.algorithm = importance.algorithm,
+                                relief.k.method = "k_half_sigma",             # ReliefF knn
+                                num_tree = num_tree,
+                                verbose = verbose)
+```
+
+### nested CV results
+```{r, message=FALSE, echo=T}
+cat("\n Train R-Squared [",rncv_result$cv.acc,"]\n")
+cat("\n Validation R-Squared [",rncv_result$Validation,"]\n")
+cat("\n Selected Features \n [",rncv_result$Features,"]\n")
+cat("\n Elapsed Time [",rncv_result$Elapsed,"]\n")
+```
+
+### Consensus nested CV
+```{r, message=FALSE}
+cncv_result <- consensus_nestedCV(train.ds = rbind(data.sets$train,data.sets$holdout), 
+                                  validation.ds =  data.sets$validation, 
+                                  label = data.sets$label,
+                                  is.simulated = TRUE,
+                                  ncv_folds = c(10, 10),
+                                  param.tune = FALSE,
+                                  learning_method = "rf", 
+                                  importance.algorithm = importance.algorithm,
+                                  relief.k.method = "k_half_sigma",             # ReliefF knn
+                                  num_tree = num_tree,
+                                  verbose = verbose)
+```
+
+### cnCV results
+
+```{r, echo=T}
+cat("\n Train R-Squared [",cncv_result$cv.acc,"]\n")
+cat("\n Validation R-Squared [",cncv_result$Validation,"]\n")
+cat("\n Selected Features \n [",cncv_result$Features,"]\n")
+cat("\n Elapsed Time [",cncv_result$Elapsed,"]\n")
+```
